--- a/css/custom.css
+++ b/css/custom.css
@@ -268,7 +268,9 @@ a:focus {
 .sites {
     border:solid;
     border-width:1px;
-    max-width:676px
+    max-width:676px;
+    padding-bottom: 1px;
+
 }
 
 .row {
