--- a/css/custom2.css
+++ b/css/custom2.css
@@ -66,7 +66,7 @@ a:focus {
     width:100%;
     height:100%;
     position:fixed;
-    background:url(../images/index-bg.jpg) no-repeat center center fixed;
+    background:url(../images/index-bg.jpg) no-repeat ;
      -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
@@ -80,7 +80,8 @@ a:focus {
     overflow:hidden;
     margin:0;
     padding:0;
-    max-width:100%
+    max-width:100%;
+        min-height: 100%;
 }
 
 
