--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,9 @@
     margin-bottom:3%
 }
 
+.black {
+    display: none;
+}
 #nav2 ul li {
     display:inline
 }
@@ -66,7 +69,11 @@ a:focus {
     width:100%;
     height:100%;
     position:fixed;
-    background:url(../images/index-bg.jpg) no-repeat center center fixed;
+    background:url(../images/index-bg.jpg) no-repeat ;
+     -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
     -webkit-background-size:cover;
     -moz-background-size:cover;
     -o-background-size:cover;
@@ -76,8 +83,11 @@ a:focus {
     overflow:hidden;
     margin:0;
     padding:0;
-    max-width:100%
+    max-width:100%;
+        min-height: 100%;
 }
+
+
 
 .body {
     max-width:100%
@@ -223,8 +233,10 @@ a:focus {
     display:block;
     margin-left:38%;
     width:25%;
-    margin-top:50px
+    margin-top:50px;
+    margin-bottom: 10px;
 }
+    
 }
 
 @media screen and (max-height: 700px) {
@@ -247,6 +259,8 @@ a:focus {
 .about {
     width:100%!important
 }
+    
+
 }
 
 @media screen and (max-width: 1000px) {
@@ -268,7 +282,9 @@ a:focus {
 .sites {
     border:solid;
     border-width:1px;
-    max-width:676px
+    max-width:676px;
+    padding-bottom: 1px;
+
 }
 
 .row {
@@ -286,6 +302,20 @@ a:focus {
 .max {
     display:none!important
 }
+}
+@media screen and (max-width: 600px) {
+#banner {
+    display: none !important;
+}
+    
+.black {
+    display: block !important;
+    
+}
+    
+    .white {
+        display: none !important;
+    }
 }
 
 .footer {
@@ -314,4 +344,13 @@ a:resume {
 
 .footer-icons {
     text-align: center;
+}
+
+.mobile-bg {
+    background-image: url(../images/index-bg.jpg);
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 1000px;
 }
