--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,7 @@
     width: 100%;
 
         position: absolute;
-  margin-top: 150px !important;
+  margin-top: 13% !important;
         float: left;
     top: 0;
 }
@@ -206,7 +206,8 @@ a:focus {
 .icons {
     display:block;
     margin-left:30%;
-    width:40%
+    width:40%;
+
 }
 
 .icon-right {
@@ -238,6 +239,8 @@ a:focus {
     width:25%;
     margin-top:50px
 }
+
+
 }
 
 @media screen and (max-height: 700px) {
@@ -314,19 +317,19 @@ a:focus {
 
 
 @media screen and (max-width: 558px) {
-    
+
     #banner {
         display: none;
     }
-    
+
     .bg {
         visibility: visible !important ;
     }
-    
+
         .icons-grouped-mobile {
        margin-top: 50px !important;
     }
-    
+
 }
 
 .footer {
@@ -359,7 +362,7 @@ a:resume {
 .mobile-bg {
     position: relative;
     float: left;
-    
+
 }
 
 
